flex wrap fix

--- a/css/contact.css
+++ b/css/contact.css
@@ -8,5 +8,4 @@
 
 .contact__items {
   border: var(--troubleshootingBorder);
-  width: 20%;
 }
